创建第二个页面

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
-		<link rel="stylesheet" type="text/css" href="css/home.css" />
+		<link rel="stylesheet" type="text/css" href="css/Home.css" />
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css" />
 		<title></title>
 	</head>
@@ -21,7 +21,7 @@
 					<div class="menu clear">
 						<ul>
 							<li class="menu-items">
-								<a href="#">关于我们</a>
+								<a href="AboutMe.html">关于我们</a>
 							</li>
 							<li class="menu-items">
 								<a href="#">产品方案</a>
@@ -89,7 +89,7 @@
 						</div>
 						<div class="banner-video left">
 							<div class="banner_img swiper-container swiper-container-horizontal">
-								<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); transition-duration: 2s;">
+								<div class="swiper-wrapper" style="transform: translate3d(0px, 0px, 0px); ">
 									<div class="swiper-slide swiper-slide-active"><img src="img/banner1.png"></div>
 									<div class="swiper-slide swiper-slide-next"><img src="img/banner2.png"></div>
 									<div class="swiper-slide"><img src="img/banner3.png" /></div>
