--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,14 +24,66 @@
 						<img src="img/computer.png" />
 					</div>
 				</div>
-				<div class="top-area-content">
-					<div class="">
-						1
+				<div class="top-area-content clear">
+					<div class="content-menu">
+						<ul class="big-menu">
+							<li>
+								<p class="zhongwen">关于我们</p>
+								<p class="yingwen">About Us</p>
+							</li>
+							<li class="menu-acticve">
+								<p class="titlep">企业简介</p>
+								<p class="titley">Company Profile</p>
+								<span></span>
+							</li>
+							<li class="menu-acticve">
+								<p class="titlep">奥维生态</p>
+								<p class="titley">Aowei Ecology</p>
+								<span></span>
+							</li>
+							<li>
+								<p>奥维数据</p>
+								<p>Aowei Data</p>
+							</li>
+							<li>
+								<p>数梦起乘</p>
+								<p>Counting Dreams</p>
+							</li>
+							<li>
+								<p>物产中大数据</p>
+								<p>Wuchan zhongda Property</p>
+							</li>
+							<li>
+								<p>衢时代</p>
+								<p>Chu Times</p>
+							</li>
+							<li>
+								<p>行业数据深度应用平台</p>
+								<p>Industry Data Application Platform</p>
+							</li>
+						</ul>
 					</div>
-					<div class="">
-						2
+					<div class="content-about">
+						<ul class="content-about-me">
+							<li>
+								<p><span>13</span>项</p>
+								<p>软件著作权登记证书13项</p>
+							</li>
+							<li>
+								<p><span>12</span>项</p>
+								<p>软件产品登记证书12项</p>
+							</li>
+							<li>
+								<p><span>1</span>项</p>
+								<p>数码成像档案仪专利1项</p>
+							</li>
+						</ul>
+						<div class="jianjjie">
+							<p>浙江奥维数据技术有限公司，企业定位为政务大数据运营服务商，多年来从事政务数据服务，为上百个城市提供大数据系统建设运营，目前联合阿里云以及数梦工场，承接政务网、雪亮工程等政府项目的整体融资安排、规划集成建设以及后续综合运维等落地工作。</p>
+							<p>公司拥有软件企业认定证书，测绘资质丙级证书，并通过IOS 9001：2008质量管理体系认证，CMM13级评估。在自主知识产权当面，以取得软件著作权登记书13项，软件产品登记证书12项，并获得数码成像档案仪专利1项。</p>
+						</div>
 					</div>
-					<div class="top-area-img"><img src="img/aboutbg.png"/></div>
+					<div class="content-img"><img src="img/aboutbg.png" /></div>
 				</div>
 			</div>
 		</div>
