完成关于我的页面 新建产品方案的页面

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/AboutMe.css" />
-		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css" />
+		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 		<title></title>
 	</head>
 
@@ -86,27 +86,61 @@
 					<div class="content-img"><img src="img/aboutbg.png" /></div>
 				</div>
 			</div>
+			<div class="bottom-area">
+				<div class="bgceng"><img src="img/bgceng.jpg" /></div>
+				<div class="bottom-area-title clear">
+					<ul class="title left">
+						<li>
+							<p class="zhongwen">关于我们</p>
+							<p class="yingwen">About Us</p>
+						</li>
+						<li class="menu-acticve">
+							<p class="titlep">企业简介</p>
+							<p class="titley">Company Profile</p>
+							<span></span>
+						</li>
+						<li class="menu-acticve">
+							<p class="titlep">奥维生态</p>
+							<p class="titley">Aowei Ecology</p>
+							<span></span>
+						</li>
+					</ul>
+					<div class="logo-yun right">
+						<img src="img/yun.png" />
+					</div>
+					<ul class="bottom-menu right clear">
+						<li>
+							<i class="iconfont">&#58882;</i>
+							<p class="titlep">奥维数据</p>
+							<p class="titley">Aowei Data</p>
+						</li>
+						<li>
+							<i class="iconfont">&#58938;</i>
+							<p class="titlep">数梦起乘</p>
+							<p class="titley">Counting Dreams</p>
+							<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
+						</li>
+						<li>
+							<i class="iconfont">&#58913;</i>
+							<p class="titlep">物产中大数据</p>
+							<p class="titley">Wuchan zhongda Property</p>
+						</li>
+						<li>
+							<i class="iconfont">&#59349;</i>
+							<p class="titlep">衢时代</p>
+							<p class="titley">Chu Times</p>
+							<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
+						</li>
+						<li>
+							<i class="iconfont">&#58942;</i>
+							<p class="titlep">行业数据深度应用平台</p>
+							<p class="titley">Industry Data Application Platform</p>
+						</li>
+					</ul>
+				</div>
+
+			</div>
 		</div>
-		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/swiper.min.inner.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript">
-			var swiper = new Swiper('.swiper-container', {
-				spaceBetween: 30,
-				centeredSlides: true,
-				autoplay: {
-					delay: 2500,
-					disableOnInteraction: false,
-				},
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-				navigation: {
-					nextEl: '.swiper-button-next',
-					prevEl: '.swiper-button-prev',
-				},
-			});
-		</script>
 	</body>
 
 </html>
