--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -108,10 +108,41 @@
 						</ul>
 					</div>
 				</div>
-				
 			</div>
 			<div class="bottom-area">
-				<img src="img/productbg.jpg"/>
+				<img src="img/productbg.png" />
+				<div class="bottom-logo">
+					<div class="menu-logo">
+						ALLWAY
+					</div>
+					<img src="img/productlogo.png" />
+				</div>
+				<ul class="big-menu">
+					<li>
+						<p>应用场景</p>
+						<p>Application Scenario</p>
+					</li>
+				</ul>
+				<div class="title-tips">
+					<span>重点人员监控</span> <span>人像大数据</span> <span>车牌大数据</span>
+					<span>综治实战平台</span> <span>实时显示大屏</span> <span>... ...</span>
+				</div>
+				<div class="detail-menu clear">
+					<p>算法平台</p>
+					<ul>
+						<li>逻辑回归</li>
+						<li>线性计算</li>
+						<li>朴素贝叶斯</li>
+						<li>混合算法计算</li>
+						<li>数据治理计算</li>
+						<li>机器学习</li>
+						<li>主题库</li>
+						<li>数据建模</li>
+						<li>数据预测</li>
+						<li>人工智能</li>
+						<li>... ...</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</body>
