完成第三个页面的中间部分

--- a/home.html
+++ b/home.html
@@ -12,13 +12,14 @@
 
 	<body>
 		<!--  -->
-		<!-- 顶部 -->
 		<div class="box">
+			<!-- 顶部背景 -->
 			<ul class="imgList">
 				<li>
 					<a style="background-image: url(img/homebg.png)"></a>
 				</li>
 			</ul>
+			<!-- 顶部背景 -->
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
@@ -48,7 +49,7 @@
 				</div>
 			</div>
 			<!-- logo搜索 -->
-			<!-- 顶部标题 -->
+			<!-- 顶部主题部分 -->
 			<div class="top-area-title lo-ss over-h clear">
 				<div class="left-title left">
 					<div>
@@ -78,6 +79,7 @@
 				</div>
 				<!-- 扇形部分 -->
 			</div>
+			<!-- 顶部主题部分 -->
 			<!-- 轮播 -->
 			<div class="banner lo-ss over-h">
 				<div class="banner-content clear">
@@ -111,10 +113,8 @@
 				<div class="banner-footer"></div>
 			</div>
 			<!-- 轮播 -->
-			<!-- 顶部标题 -->
 		</div>
-		<!-- 顶部 -->
-		<!-- 导航 -->
+		<!-- 底部主题 -->
 		<div class="lo-ss daohang">
 			<ul class="si-dh">
 				<li class="logo">
@@ -245,7 +245,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- 导航 -->
+		<!-- 底部主题 -->
 		<div class="bottom-area"></div>
 
 		<script src="js/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
