--- a/复ProductPlan.html
+++ b/复ProductPlan.html
@@ -11,7 +11,6 @@
 
 	<body>
 		<!--  -->
-		<!-- 顶部 -->
 		<div class="box">
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
@@ -108,15 +107,110 @@
 							<p>使用开放方案技术与第三方各类应用服务进行对接</p>
 						</li>
 					</ul>
-					
+
 				</div>
 			</div>
-
 			<!-- 顶部标题 -->
 
-			<!-- 顶部 -->
-			<!-- 导航 -->
-
+			<!-- 中间部分 -->
+			<div class="middle-area lo-ss over-h clear">
+				<img class="bg-img" src="img/productbg.png" />
+				<div class="bottom-logo">
+					ALLWAY
+				</div>
+				<ul class="big-title">
+					<li>
+						<p class="zhongwen">应用场景</p>
+						<p class="yingwen">Application Scenario</p>
+					</li>
+				</ul>
+				<div class="s-title clear">
+					<span>重点人员监控</span><span>人像大数据</span><span>车牌大数据</span>
+					<span>综治实战平台</span><span>实时显示大屏</span><span>... ...</span>
+				</div>
+				<div class="menu-detail lo-ss">
+					<div class="all-dh">
+						<ul>
+							<li>算法平台</li>
+						</ul>
+						<ul>
+							<li>
+								逻辑回归
+							</li>
+							<li>
+								线性计算
+							</li>
+							<li>
+								朴素贝叶斯
+							</li>
+							<li>
+								混合算法计算
+							</li>
+							<li>
+								数据治理计算
+							</li>
+							<li>
+								数据学习
+							</li>
+						</ul>
+						<ul>
+							<li>
+								机器学习
+							</li>
+							<li>
+								主题库
+							</li>
+							<li>
+								数据建模
+							</li>
+							<li>
+								数据预测
+							</li>
+							<li>
+								人工智能
+							</li>
+							<li>
+								... ...
+							</li>
+						</ul>
+						<ul>
+							<li>大数据融合平台</li>
+						</ul>
+						<ul>
+							<li>
+								数据标准
+							</li>
+							<li>
+								数据目录
+							</li>
+							<li>
+								数据交换
+							</li>
+							<li>
+								混合计算
+							</li>
+						</ul>
+						<ul>
+							<li>
+								数据清洗
+							</li>
+							<li>
+								数据整合
+							</li>
+							<li>
+								物理建模
+							</li>
+							<li>
+								数据安全
+							</li>
+						</ul>
+						<ul>
+							<li>数据计算与建模</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<!-- 中间部分 -->
 		</div>
 	</body>
 
