--- a/AboutMe.html
+++ b/AboutMe.html
@@ -12,7 +12,6 @@
 
 	<body>
 		<!--  -->
-		<!-- 顶部 -->
 		<div class="box">
 			<!-- logo搜索 -->
 			<div class="lo-ss loss">
@@ -26,7 +25,7 @@
 				</div>
 			</div>
 			<!-- logo搜索 -->
-			<!-- 顶部标题 -->
+			<!-- 顶部 -->
 			<div class="top-area-content lo-ss clear">
 				<div class="content-menu">
 					<ul class="big-menu">
@@ -86,9 +85,10 @@
 						<p>公司拥有软件企业认定证书，测绘资质丙级证书，并通过IOS 9001：2008质量管理体系认证，CMM13级评估。在自主知识产权当面，以取得软件著作权登记书13项，软件产品登记证书12项，并获得数码成像档案仪专利1项。</p>
 					</div>
 				</div>
-				<div class="content-img"><img src="img/aboutbg.png" /></div>
+				<div class="content-img clear"><img src="img/aboutbg.png" /></div>
 			</div>
-			<!-- 顶部标题 -->
+			<!-- 顶部 -->
+			<!-- 底部 -->
 			<div class="lo-ss bottom-area ">
 				<div class="bgceng"><img src="img/bgceng.jpg" /></div>
 				<div class="bottom-area-title clear">
@@ -110,38 +110,39 @@
 					</ul>
 					<div class="logo-yun right">
 						<img src="img/yun.png" />
+						<ul class="bottom-menu right clear">
+							<li>
+								<i class="iconfont">&#58882;</i>
+								<p class="titlep">奥维数据</p>
+								<p class="titley">Aowei Data</p>
+							</li>
+							<li>
+								<i class="iconfont">&#58938;</i>
+								<p class="titlep">数梦起乘</p>
+								<p class="titley">Counting Dreams</p>
+								<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
+							</li>
+							<li>
+								<i class="iconfont">&#58913;</i>
+								<p class="titlep">物产中大数据</p>
+								<p class="titley">Wuchan zhongda Property</p>
+							</li>
+							<li>
+								<i class="iconfont">&#59349;</i>
+								<p class="titlep">衢时代</p>
+								<p class="titley">Chu Times</p>
+								<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
+							</li>
+							<li>
+								<i class="iconfont">&#58942;</i>
+								<p class="titlep">行业数据深度应用平台</p>
+								<p class="titley">Industry Data Application Platform</p>
+							</li>
+						</ul>
 					</div>
-					<ul class="bottom-menu right clear">
-						<li>
-							<i class="iconfont">&#58882;</i>
-							<p class="titlep">奥维数据</p>
-							<p class="titley">Aowei Data</p>
-						</li>
-						<li>
-							<i class="iconfont">&#58938;</i>
-							<p class="titlep">数梦起乘</p>
-							<p class="titley">Counting Dreams</p>
-							<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
-						</li>
-						<li>
-							<i class="iconfont">&#58913;</i>
-							<p class="titlep">物产中大数据</p>
-							<p class="titley">Wuchan zhongda Property</p>
-						</li>
-						<li>
-							<i class="iconfont">&#59349;</i>
-							<p class="titlep">衢时代</p>
-							<p class="titley">Chu Times</p>
-							<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
-						</li>
-						<li>
-							<i class="iconfont">&#58942;</i>
-							<p class="titlep">行业数据深度应用平台</p>
-							<p class="titley">Industry Data Application Platform</p>
-						</li>
-					</ul>
 				</div>
 			</div>
+			<!-- 底部 -->
 		</div>
 		<!-- 导航 -->
 	</body>
