--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -1,149 +1,267 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8">
+		<title>ALLWAY</title>
+		<link rel="stylesheet" href="font/iconfont.css" />
+		<link rel="stylesheet" type="text/css" href="css/ProductPlan.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
-		<link rel="stylesheet" type="text/css" href="css/ProductPlan.css" />
-		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
-		<title></title>
 	</head>
 
 	<body>
-		<div class="content center">
-			<!----------top-area---------->
-			<div class="top-area">
-				<div class="top-area-line"></div>
-				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
-				<div class="top-area-menu">
-					<div class="menu-logo">
-						ALLWAY
-					</div>
-					<div class="menu-input">
-						<input type="text" name="" id="" value="" />
-						<span><img src="img/fangda.png"/></span>
-						<img src="img/computer.png" />
-					</div>
-				</div>
-				<div class="top-area-content clear">
-					<div class="content-menu">
-						<ul class="big-menu">
-							<li>
-								<p class="zhongwen">产品方案</p>
-								<p class="yingwen">Product Plan</p>
-							</li>
-							<li class="menu-acticve">
-								<p class="titlep">数据大脑 政务</p>
-								<p class="titley">Data Brain Government</p>
-								<span></span>
-							</li>
-							<li>
-								<p>方案概述</p>
-								<p>Programme Plan</p>
-							</li>
-							<li>
-								<p>方案特性</p>
-								<p>Programme Characteristic</p>
-							</li>
-							<li>
-								<p>应用场景</p>
-								<p>Application Scenario</p>
-							</li>
-							<li>
-								<p>行业案例</p>
-								<p>Industry Case</p>
-							</li>
-							<li class="menu-acticve">
-								<p class="titlep">数据大脑 企业</p>
-								<p class="titley">Data Brain Enterprise</p>
-								<span></span>
-							</li>
-							<li>
-								<p>方案概述</p>
-								<p>Programme Plan</p>
-							</li>
-							<li>
-								<p>方案特性</p>
-								<p>Programme Characteristic</p>
-							</li>
-							<li>
-								<p>应用场景</p>
-								<p>Application Scenario</p>
-							</li>
-							<li>
-								<p>行业案例</p>
-								<p>Industry Case</p>
-							</li>
-						</ul>
-					</div>
-					<div class="top-content right">
-						<ul class="firstul">
-							<li>
-								<p class="xzhongwen">方案概述</p>
-								<p class="xyingwen">Programme Plan</p>
-								<div class="gaishu">公司以阿里云为基础，以数梦工场为技术核心，将互联网的能力与政务进行创新融合，在流程优化的基础上，引入以资源集约共享、弹性伸缩、极致体验、敏捷支撑为特征的互联网技术及配套产业基金，从而实现政务便民服务、政务管理与辅助决策以及产业支持等精细化政务体系。</div>
-							</li>
-							<li>
-								<p class="xzhongwen">方案特性</p>
-								<p class="xyingwen">Programme Characteristic</p>
-							</li>
-						</ul>
-						<ul class="secondul">
-							<li>
-								<b>便捷</b>
-								<p>基于互联网能力中心方案提供政务应用一站式开发部署服务能力</p>
-							</li>
-							<li>
-								<b>智慧</b>
-								<p>提供全流程的政务业务跟踪与监控并为政务业务提供辅助决策能力</p>
-							</li>
-							<li>
-								<b>安全</b>
-								<p>通过云盾及全方位的数据与业务权限流程监管为政务数据安全保驾护航</p>
-							</li>
-							<li>
-								<b>开放</b>
-								<p>使用开放方案技术与第三方各类应用服务进行对接</p>
-							</li>
-						</ul>
-					</div>
+		<!--  -->
+		<div class="box">
+			<!-- logo搜索 -->
+			<div class="lo-ss over-h loss">
+				<span class="logo">
+					ALLWAY
+				</span>
+				<div class="ssuo over-h">
+					<input type="text">
+					<div class="search"><img src="img/fangda.png" /></div>
+					<div class="all"><img src="img/computer.png" /></div>
 				</div>
 			</div>
-			<div class="bottom-area">
-				<img src="img/productbg.png" />
-				<div class="bottom-logo">
-					<div class="menu-logo">
-						ALLWAY
-					</div>
-					<img src="img/productlogo.png" />
-				</div>
-				<ul class="big-menu">
-					<li>
-						<p>应用场景</p>
-						<p>Application Scenario</p>
-					</li>
-				</ul>
-				<div class="title-tips">
-					<span>重点人员监控</span> <span>人像大数据</span> <span>车牌大数据</span>
-					<span>综治实战平台</span> <span>实时显示大屏</span> <span>... ...</span>
-				</div>
-				<div class="detail-menu clear">
-					<p>算法平台</p>
-					<ul>
-						<li>逻辑回归</li>
-						<li>线性计算</li>
-						<li>朴素贝叶斯</li>
-						<li>混合算法计算</li>
-						<li>数据治理计算</li>
-						<li>机器学习</li>
-						<li>主题库</li>
-						<li>数据建模</li>
-						<li>数据预测</li>
-						<li>人工智能</li>
-						<li>... ...</li>
+			<!-- logo搜索 -->
+			<!-- 顶部标题 -->
+			<div class="top-area-content lo-ss over-h clear">
+				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
+				<div class="content-menu lo-ss">
+					<ul class="big-menu">
+						<li>
+							<p class="zhongwen">产品方案</p>
+							<p class="yingwen">Product Plan</p>
+						</li>
+						<li class="menu-acticve">
+							<p class="titlep">数据大脑 政务</p>
+							<p class="titley">Data Brain Government</p>
+							<span></span>
+						</li>
+						<li>
+							<p>方案概述</p>
+							<p>Programme Plan</p>
+						</li>
+						<li>
+							<p>方案特性</p>
+							<p>Programme Characteristic</p>
+						</li>
+						<li>
+							<p>应用场景</p>
+							<p>Application Scenario</p>
+						</li>
+						<li>
+							<p>行业案例</p>
+							<p>Industry Case</p>
+						</li>
+						<li class="menu-acticve">
+							<p class="titlep">数据大脑 企业</p>
+							<p class="titley">Data Brain Enterprise</p>
+							<span></span>
+						</li>
+						<li>
+							<p>方案概述</p>
+							<p>Programme Plan</p>
+						</li>
+						<li>
+							<p>方案特性</p>
+							<p>Programme Characteristic</p>
+						</li>
+						<li>
+							<p>应用场景</p>
+							<p>Application Scenario</p>
+						</li>
+						<li>
+							<p>行业案例</p>
+							<p>Industry Case</p>
+						</li>
 					</ul>
 				</div>
+				<div class="top-content right">
+					<ul class="firstul">
+						<li>
+							<p class="xzhongwen">方案概述</p>
+							<p class="xyingwen">Programme Plan</p>
+							<div class="gaishu">公司以阿里云为基础，以数梦工场为技术核心，将互联网的能力与政务进行创新融合，在流程优化的基础上，引入以资源集约共享、弹性伸缩、极致体验、敏捷支撑为特征的互联网技术及配套产业基金，从而实现政务便民服务、政务管理与辅助决策以及产业支持等精细化政务体系。</div>
+						</li>
+						<li>
+							<p class="xzhongwen">方案特性</p>
+							<p class="xyingwen">Programme Characteristic</p>
+						</li>
+					</ul>
+					<ul class="secondul">
+						<li>
+							<b>便捷</b>
+							<p>基于互联网能力中心方案提供政务应用一站式开发部署服务能力</p>
+						</li>
+						<li>
+							<b>智慧</b>
+							<p>提供全流程的政务业务跟踪与监控并为政务业务提供辅助决策能力</p>
+						</li>
+						<li>
+							<b>安全</b>
+							<p>通过云盾及全方位的数据与业务权限流程监管为政务数据安全保驾护航</p>
+						</li>
+						<li>
+							<b>开放</b>
+							<p>使用开放方案技术与第三方各类应用服务进行对接</p>
+						</li>
+					</ul>
+
+				</div>
 			</div>
+			<!-- 顶部标题 -->
+
+			<!-- 中间部分 -->
+			<div class="middle-area lo-ss over-h clear">
+				<img class="bg-img" src="img/productbg.png" />
+				<div class="bottom-logo">
+					ALLWAY
+				</div>
+				<ul class="big-title">
+					<li>
+						<p class="zhongwen">应用场景</p>
+						<p class="yingwen">Application Scenario</p>
+					</li>
+				</ul>
+				<div class="s-title clear">
+					<span>重点人员监控</span><span>人像大数据</span><span>车牌大数据</span>
+					<span>综治实战平台</span><span>实时显示大屏</span><span>... ...</span>
+				</div>
+				<div class="menu-detail lo-ss">
+					<div class="a-ul">
+						<ul>
+							<li>算法平台</li>
+						</ul>
+						<ul>
+							<li>
+								逻辑回归
+							</li>
+							<li>
+								线性计算
+							</li>
+							<li>
+								朴素贝叶斯
+							</li>
+							<li>
+								混合算法计算
+							</li>
+							<li>
+								数据治理计算
+							</li>
+							<li>
+								数据学习
+							</li>
+						</ul>
+						<ul>
+							<li>
+								机器学习
+							</li>
+							<li>
+								主题库
+							</li>
+							<li>
+								数据建模
+							</li>
+							<li>
+								数据预测
+							</li>
+							<li>
+								人工智能
+							</li>
+							<li>
+								... ...
+							</li>
+						</ul>
+						<ul>
+							<li>大数据融合平台</li>
+						</ul>
+						<ul>
+							<li>
+								数据标准
+							</li>
+							<li>
+								数据目录
+							</li>
+							<li>
+								数据交换
+							</li>
+							<li>
+								混合计算
+							</li>
+						</ul>
+						<ul>
+							<li>
+								数据清洗
+							</li>
+							<li>
+								数据整合
+							</li>
+							<li>
+								物理建模
+							</li>
+							<li>
+								数据安全
+							</li>
+						</ul>
+						<ul>
+							<li>数据计算与建模</li>
+						</ul>
+					</div>
+					<div class="b-ul clear">
+						<ul>
+							<li>学校监控视频</li>
+							<li>市民信用数据</li>
+							<li>城管执法现场数据</li>
+							<li>街面监控视频</li>
+						</ul>
+						<ul>
+							<li>企业监控视频</li>
+							<li>第三方人脸识别数据</li>
+							<li>城管传感系统数据</li>
+						</ul>
+						<ul>
+							<li>停车场数据</li>
+							<li>院落监控视频</li>
+							<li>网格员现场数据</li>
+						</ul>
+						<ul>
+							<li>警务系统数据</li>
+							<li>景区监控视频</li>
+							<li>人车物核查数据</li>
+						</ul>
+					</div>
+					<div class="c-ul">
+						<ul>
+							<li>互联网</li>
+							<li>社会面前端设备</li>
+							<li>社会APP</li>
+						</ul>
+						<ul>
+							<li>政务外网</li>
+							<li>综治移民单兵</li>
+						</ul>
+						<ul>
+							<li>公安图综平台</li>
+							<li>前段摄像头</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<!-- 中间部分 -->
+			<!-- 底部部分 -->
+			<div class="bottom-area lo-ss over-h">
+				<img src="img/fanganbg.png"/>
+				<div class="bottom-area-content">
+					<div class="bottom-img">
+						<img src="img/producta.png"/>
+					</div>
+					<div class="bottom-txt">
+						1111
+					</div>
+				</div>
+			</div>
+			<!-- 底部部分 -->
 		</div>
 	</body>
 
