创建第四个网页

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 						<a href="ProductPlan.html">产品方案</a>
 					</li>
 					<li class="menu-items">
-						<a href="#">新闻动态</a>
+						<a href="NewsInfo.html">新闻动态</a>
 					</li>
 					<li class="menu-items">
 						<a href="#">合作伙伴</a>
