页面框架完成

--- a/NewsInfo.html
+++ b/NewsInfo.html
@@ -3,8 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>ALLWAY</title>
-		<link rel="stylesheet" href="font/iconfont.css" />
+		<title>ALLWAY-News</title>
 		<link rel="stylesheet" type="text/css" href="css/NewsInfo.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 	</head>
@@ -27,7 +26,7 @@
 			<!-- 顶部标题 -->
 			<div class="top-area-content lo-ss over-h clear">
 				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
-				<div class="content-menu lo-ss">
+				<div class="content-menu">
 					<ul class="big-menu">
 						<li>
 							<p class="zhongwen">新闻动态</p>
@@ -45,31 +44,25 @@
 						</li>
 					</ul>
 				</div>
-				<div class="top-content right">
+				<div class="top-content">
 					<div class="firstul">
-							<p class="titlep">数字化转型，</p>
-							<p class="titlep">为什么需要新型互联网构建“大中台”？</p>
-							<p class="titlep">Digital transformation,</p>
-							<p class="titlep">Why do we need to use the new Internet to build a "big platform"?</p>
-							<p>2019年全国两会，李克强总理在政府工作报告中首次提出“智能+”。从“互联网+”到“智能+”，时隔四年，算力、算法、数据进一步大爆发，数字化转型升级风起云涌，成为新时代的大势所趋。</p>
-							<p>在服务政府、城市和产业等领域实现数字化转型过程中，数梦工场结合各行各业的业务场景，引入大中台理念，以大数据、人工智能和互联网技术沉淀出了行业化的新型互联网平台，其中包括以数据共享为核心的数据平台、以业务能力共享为核心的业务中台和以行业化的 AI 技术为核心的 AI 中台。这三个中台相互倚助，支撑数字政府、智慧城市、产业经济等领域的应用创新，成为各行各业数字化转型升级的创新引擎。</p>
-							<p>那么，为什么是新型互联网平台？这个基于新型互联网架构的“大中台”解决了什么问题，落地了哪些应用场景？让我们来为您一一解答。</p>
-							<p>以政务行业为例，在过去的IT时代，主流的政务软件系统开发方式因为较少考虑不同应用之间的整合互通问题，导致在底层开发时造成了大量的重复建设并形成了林立的“信息烟囱”。</p>
-							<p>数梦工场新型互联网架构实际上助力客户打破了原来IT时代割裂的底层架构，通过构建中台提炼了开发业务应用所需的共同底层需求，形成共享能力，降低了开发成本，提升了业务灵活性，为政务应用形成繁荣的生态提供了可能性。强大的数据中台、业务中台和AI中台，让疏离的政务应用能进化为繁荣的数字经济生态体系，这便是采用“新型互联网架构”的重要意义。</p>
-							<p>不过，需特别指出的是，这种新型互联网架构的中台体系并不是要把过去独立软件供应商（ISV）建的“烟囱”都取缔掉，而是融合、打通与再创新。</p>
-							<p>作为新型互联网领航者，数梦工场的使命是助力数字中国建设，使能政务、城市、产业领域数字化转型。</p>
-							<p>比如在浙江，数梦工场深度参与了浙江省政府以“最多跑一次”改革为抓手的政府数字化转型，运用数据技术支撑最多跑一次改革和政府数字化转型。在这个过程中，“最多跑一次”写入2018年政府工作报告，浙江经验走向全国，并成为国家发改委发布的30个“数字中国”建设最佳实践之一。数梦工场认为，浙江“互联网+政务服务”不断源化改革，始终走在全国前列，与其开放、共享、领先的互联网架构密不可分，也和书梦工场一贯倡导的“新型互联网架构”高度契合。</p>
-							<p>基于这种先进的互联网架构和理念，在浙江“最多跑一次”改革中，数梦工场配合浙江省政府在数据治理的过程中逐渐形成数据的标准，支撑其基于数据共享的流程再造，助力实现“数据跑路”代替“群众跑腿”，这些在实践中沉淀的经验可以为全国复制。</p>
-					
-					
+						<p class="titlep">数字化转型，</p>
+						<p class="titlep">为什么需要新型互联网构建“大中台”？</p>
+						<p class="titlep">Digital transformation,</p>
+						<p class="titlep">Why do we need to use the new Internet to build a "big platform"?</p>
+						<p>2019年全国两会，李克强总理在政府工作报告中首次提出“智能+”。从“互联网+”到“智能+”，时隔四年，算力、算法、数据进一步大爆发，数字化转型升级风起云涌，成为新时代的大势所趋。</p>
+						<p>在服务政府、城市和产业等领域实现数字化转型过程中，数梦工场结合各行各业的业务场景，引入大中台理念，以大数据、人工智能和互联网技术沉淀出了行业化的新型互联网平台，其中包括以数据共享为核心的数据平台、以业务能力共享为核心的业务中台和以行业化的 AI 技术为核心的 AI 中台。这三个中台相互倚助，支撑数字政府、智慧城市、产业经济等领域的应用创新，成为各行各业数字化转型升级的创新引擎。</p>
+						<p>那么，为什么是新型互联网平台？这个基于新型互联网架构的“大中台”解决了什么问题，落地了哪些应用场景？让我们来为您一一解答。</p>
+						<p>以政务行业为例，在过去的IT时代，主流的政务软件系统开发方式因为较少考虑不同应用之间的整合互通问题，导致在底层开发时造成了大量的重复建设并形成了林立的“信息烟囱”。</p>
+						<p>数梦工场新型互联网架构实际上助力客户打破了原来IT时代割裂的底层架构，通过构建中台提炼了开发业务应用所需的共同底层需求，形成共享能力，降低了开发成本，提升了业务灵活性，为政务应用形成繁荣的生态提供了可能性。强大的数据中台、业务中台和AI中台，让疏离的政务应用能进化为繁荣的数字经济生态体系，这便是采用“新型互联网架构”的重要意义。</p>
+						<p>不过，需特别指出的是，这种新型互联网架构的中台体系并不是要把过去独立软件供应商（ISV）建的“烟囱”都取缔掉，而是融合、打通与再创新。</p>
+						<p>作为新型互联网领航者，数梦工场的使命是助力数字中国建设，使能政务、城市、产业领域数字化转型。</p>
+						<p>比如在浙江，数梦工场深度参与了浙江省政府以“最多跑一次”改革为抓手的政府数字化转型，运用数据技术支撑最多跑一次改革和政府数字化转型。在这个过程中，“最多跑一次”写入2018年政府工作报告，浙江经验走向全国，并成为国家发改委发布的30个“数字中国”建设最佳实践之一。数梦工场认为，浙江“互联网+政务服务”不断源化改革，始终走在全国前列，与其开放、共享、领先的互联网架构密不可分，也和书梦工场一贯倡导的“新型互联网架构”高度契合。</p>
+						<p>基于这种先进的互联网架构和理念，在浙江“最多跑一次”改革中，数梦工场配合浙江省政府在数据治理的过程中逐渐形成数据的标准，支撑其基于数据共享的流程再造，助力实现“数据跑路”代替“群众跑腿”，这些在实践中沉淀的经验可以为全国复制。</p>
 					</div>
-
 				</div>
 			</div>
 			<!-- 顶部标题 -->
-
-			
 		</div>
 	</body>
-
 </html>
