--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -3,8 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>ALLWAY</title>
-		<link rel="stylesheet" href="font/iconfont.css" />
+		<title>ALLWAY-Product</title>
 		<link rel="stylesheet" type="text/css" href="css/ProductPlan.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 	</head>
