--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,8 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>ALLWAY</title>
-		<link rel="stylesheet" href="font/iconfont.css" />
+		<title>ALLWAY-About</title>
 		<link rel="stylesheet" type="text/css" href="css/AboutMe.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
