--- a/home.html
+++ b/home.html
@@ -3,8 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>ALLWAY</title>
-		<link rel="stylesheet" href="font/iconfont.css" />
+		<title>ALLWAY-Home</title>
 		<link rel="stylesheet" type="text/css" href="css/Home.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/swiper.min.inner.css" />
