--- a/NewsInfo.html
+++ b/NewsInfo.html
@@ -63,6 +63,9 @@
 				</div>
 			</div>
 			<!-- 顶部标题 -->
+			<!-- 底部部分 -->
+			<div class="bottom-area lo-ss over-h"></div>
+			<!-- 底部部分 -->
 		</div>
 	</body>
 </html>
