添加页面的链接

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/AboutMe.css">
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/iconfont.css" />
+		
 	</head>
 
 	<body>
@@ -15,12 +16,12 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss loss">
 				<span class="logo">
-					ALLWAY
+					<a href="Home.html">ALLWAY</a>
 				</span>
 				<div class="ssuo clear">
 					<input type="text">
 					<div class="search"><img src="img/fangda.png" /></div>
-					<div class="all"><img src="img/computer.png" /></div>
+					<a href="Login.html" class="all"><img src="img/computer.png" /></a>
 				</div>
 			</div>
 			<!-- logo搜索 -->
