--- a/Login.html
+++ b/Login.html
@@ -15,12 +15,12 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					ALLWAY
+					<a href="Home.html">ALLWAY</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
 					<div class="search"><img src="img/fangda.png" /></div>
-					<div class="all"><img src="img/computer.png" /></div>
+					<a href="Login.html" class="all"><img src="img/computer.png" /></a>
 				</div>
 			</div>
 			<!-- logo搜索 -->
