--- a/ProductPlan2.html
+++ b/ProductPlan2.html
@@ -14,12 +14,12 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					ALLWAY
+					<a href="Home.html">ALLWAY</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
 					<div class="search"><img src="img/fangda.png" /></div>
-					<div class="all"><img src="img/computer.png" /></div>
+					<a href="Login.html" class="all"><img src="img/computer.png" /></a>
 				</div>
 			</div>
 			<!-- logo搜索 -->
@@ -33,9 +33,11 @@
 							<p class="yingwen">Product Plan</p>
 						</li>
 						<li class="menu-acticve">
-							<p class="titlep">数据大脑 政务</p>
-							<p class="titley">Data Brain Government</p>
-							<span></span>
+							<a href="ProductPlan.html">
+								<p class="titlep">数据大脑 政务</p>
+								<p class="titley">Data Brain Government</p>
+								<span></span>
+							</a>
 						</li>
 						<li>
 							<p>方案概述</p>
@@ -54,9 +56,11 @@
 							<p>Industry Case</p>
 						</li>
 						<li class="menu-acticve">
-							<p class="titlep">数据大脑 企业</p>
-							<p class="titley">Data Brain Enterprise</p>
-							<span></span>
+							<a href="ProductPlan2.html">
+								<p class="titlep">数据大脑 企业</p>
+								<p class="titley">Data Brain Enterprise</p>
+								<span></span>
+							</a>
 						</li>
 						<li>
 							<p>方案概述</p>
