--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					ALLWAY
+					<a href="Home.html">ALLWAY</a>
 				</span>
 				<ul class="menu left clear">
 					<li class="menu-items">
@@ -38,7 +38,7 @@
 						<a href="#">合作伙伴</a>
 					</li>
 					<li class="menu-items">
-						<a href="#">联系我们</a>
+						<a href="Login.html">联系我们</a>
 					</li>
 				</ul>
 				<div class="ssuo over-h">
@@ -83,8 +83,8 @@
 			<div class="banner lo-ss over-h">
 				<div class="banner-content clear">
 					<div class="banner-title left">
-						<p>产品方案</p>
-						<p>Product Plan</p>
+						<p><a href="ProductPlan.html">产品方案</a></p>
+						<p><a href="ProductPlan.html">Product Plan</a></p>
 						<p>衢州雪亮工程</p>
 						<p>衢州市是全国第一批</p>
 						<p>浙江省首个“雪亮工程”全国示范城市</p>
@@ -117,7 +117,7 @@
 		<div class="lo-ss daohang">
 			<ul class="si-dh">
 				<li class="logo">
-					ALLWAY
+					<a href="Home.html">ALLWAY</a>
 				</li>
 			</ul>
 			<div class="middle-area-content clear">
@@ -127,32 +127,44 @@
 				<div class="menu-list left">
 					<ul class="clear">
 						<li>
-							<p>关于我们</p>
-							<p>About Us</p>
+							<a href="AboutMe.html">
+								<p>关于我们</p>
+								<p>About Us</p>
+							</a>
 						</li>
 						<li>
-							<p>产品方案</p>
-							<p>Product Plan</p>
+							<a href="ProductPlan.html">
+								<p>产品方案</p>
+								<p>Product Plan</p>
+							</a>
 						</li>
 						<li>
-							<p>新闻动态</p>
-							<p>News Information</p>
+							<a href="NewsInfo.html">
+								<p>新闻动态</p>
+								<p>News Information</p>
+							</a>	
 						</li>
 						<li>
-							<p>合作伙伴</p>
-							<p>Cooperative Partner</p>
+							<a href="#">
+								<p>合作伙伴</p>
+								<p>Cooperative Partner</p>
+							</a>	
 						</li>
 					</ul>
 					<div class="menu-list-item clear">
 						<!--子目录第一部分-->
 						<ul>
 							<li>
-								<p class="titlep">企业简介</p>
-								<p class="titley">Company Profile</p>
+								<a href="AboutMe.html">
+									<p class="titlep">企业简介</p>
+									<p class="titley">Company Profile</p>
+								</a>
 							</li>
 							<li>
-								<p class="titlep">奥维生态</p>
-								<p class="titley">Aowei Ecology</p>
+								<a href="#">
+									<p class="titlep">奥维生态</p>
+									<p class="titley">Aowei Ecology</p>
+								</a>
 							</li>
 							<li>
 								<p>奥维数据</p>
@@ -178,8 +190,10 @@
 						<!--子目录第二部分-->
 						<ul>
 							<li>
-								<p class="titlep">数据大脑 政务</p>
-								<p class="titley">Data Brain Government</p>
+								<a href="ProductPlan.html">
+									<p class="titlep">数据大脑 政务</p>
+									<p class="titley">Data Brain Government</p>
+								</a>
 							</li>
 							<li>
 								<p>方案概述</p>
@@ -198,8 +212,10 @@
 								<p>Industry Case</p>
 							</li>
 							<li>
-								<p class="titlep">数据大脑 企业</p>
-								<p class="titley">Data Brain Enterprise</p>
+								<a href="ProductPlan2.html">
+									<p class="titlep">数据大脑 企业</p>
+									<p class="titley">Data Brain Enterprise</p>
+								</a>
 							</li>
 							<li>
 								<p>方案概述</p>
@@ -221,12 +237,16 @@
 						<!--子目录第三部分-->
 						<ul>
 							<li>
-								<p class="titlep">公司新闻</p>
-								<p class="titley">Company News</p>
+								<a href="NewsInfo.html">
+									<p class="titlep">公司新闻</p>
+									<p class="titley">Company News</p>
+								</a>
 							</li>
 							<li>
-								<p class="titlep">行业新闻</p>
-								<p class="titley">Industry News</p>
+								<a href="#">
+									<p class="titlep">行业新闻</p>
+									<p class="titley">Industry News</p>
+								</a>
 							</li>
 						</ul>
 						<!--子目录第四部分-->
