改变home合作伙伴的链接

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<!--  -->
-		<div class="box">
+		<div class="box" id="top">
 			<!-- 顶部背景 -->
 			<ul class="imgList">
 				<li>
@@ -35,7 +35,7 @@
 						<a href="NewsInfo.html">新闻动态</a>
 					</li>
 					<li class="menu-items">
-						<a href="#">合作伙伴</a>
+						<a href="#bottom">合作伙伴</a>
 					</li>
 					<li class="menu-items">
 						<a href="Login.html">联系我们</a>
@@ -114,10 +114,10 @@
 			<!-- 轮播 -->
 		</div>
 		<!-- 底部主题 -->
-		<div class="lo-ss daohang">
+		<div class="lo-ss daohang" id="bottom">
 			<ul class="si-dh">
 				<li class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="#top">ALLWAY</a>
 				</li>
 			</ul>
 			<div class="middle-area-content clear">
