修改英文单词

--- a/Login.html
+++ b/Login.html
@@ -15,7 +15,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
