--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -14,7 +14,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
@@ -30,7 +30,7 @@
 					<ul class="big-menu">
 						<li>
 							<p class="zhongwen">产品方案</p>
-							<p class="yingwen">Product Plan</p>
+							<p class="yingwen">Product Solution</p>
 						</li>
 						<li class="menu-acticve">
 							<a href="ProductPlan.html">
@@ -41,11 +41,11 @@
 						</li>
 						<li>
 							<p>方案概述</p>
-							<p>Programme Plan</p>
+							<p>Solution Overview</p>
 						</li>
 						<li>
 							<p>方案特性</p>
-							<p>Programme Characteristic</p>
+							<p>Solution Feature</p>
 						</li>
 						<li>
 							<p>应用场景</p>
@@ -64,11 +64,11 @@
 						</li>
 						<li>
 							<p>方案概述</p>
-							<p>Programme Plan</p>
+							<p>Solution Overview</p>
 						</li>
 						<li>
 							<p>方案特性</p>
-							<p>Programme Characteristic</p>
+							<p>Solution Feature</p>
 						</li>
 						<li>
 							<p>应用场景</p>
@@ -84,12 +84,12 @@
 					<ul class="firstul">
 						<li>
 							<p class="xzhongwen">方案概述</p>
-							<p class="xyingwen">Programme Plan</p>
+							<p class="xyingwen">Solution Overview</p>
 							<div class="gaishu">公司以阿里云为基础，以数梦工场为技术核心，将互联网的能力与政务进行创新融合，在流程优化的基础上，引入以资源集约共享、弹性伸缩、极致体验、敏捷支撑为特征的互联网技术及配套产业基金，从而实现政务便民服务、政务管理与辅助决策以及产业支持等精细化政务体系。</div>
 						</li>
 						<li>
 							<p class="xzhongwen">方案特性</p>
-							<p class="xyingwen">Programme Characteristic</p>
+							<p class="xyingwen">Solution Feature</p>
 						</li>
 					</ul>
 					<ul class="secondul">
@@ -119,7 +119,7 @@
 			<div class="middle-area lo-ss over-h clear">
 				<img class="bg-img" src="img/productbg.png" />
 				<div class="bottom-logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</div>
 				<ul class="big-title">
 					<li>
