--- a/ProductPlan2.html
+++ b/ProductPlan2.html
@@ -14,7 +14,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
@@ -30,7 +30,7 @@
 					<ul class="big-menu">
 						<li>
 							<p class="zhongwen">产品方案</p>
-							<p class="yingwen">Product Plan</p>
+							<p class="yingwen">Product Solution</p>
 						</li>
 						<li class="menu-acticve">
 							<a href="ProductPlan.html">
@@ -41,11 +41,11 @@
 						</li>
 						<li>
 							<p>方案概述</p>
-							<p>Programme Plan</p>
+							<p>Solution Overview</p>
 						</li>
 						<li>
 							<p>方案特性</p>
-							<p>Programme Characteristic</p>
+							<p>Solution Feature</p>
 						</li>
 						<li>
 							<p>应用场景</p>
@@ -64,11 +64,11 @@
 						</li>
 						<li>
 							<p>方案概述</p>
-							<p>Programme Plan</p>
+							<p>Solution Overview</p>
 						</li>
 						<li>
 							<p>方案特性</p>
-							<p>Programme Characteristic</p>
+							<p>Solution Feature</p>
 						</li>
 						<li>
 							<p>应用场景</p>
@@ -84,12 +84,12 @@
 					<ul class="firstul">
 						<li>
 							<p class="xzhongwen">方案概述</p>
-							<p class="xyingwen">Programme Plan</p>
+							<p class="xyingwen">Solution Overview</p>
 							<div class="gaishu">公司基于数梦工场业务能力和企业转型难题构建的技术框架，帮助企业更灵活的构建和扩展其业务，打破数据孤岛，构建数据化运营体系，助力传统企业快速向互联网+转型。</div>
 						</li>
 						<li>
 							<p class="xzhongwen">方案特性</p>
-							<p class="xyingwen">Programme Characteristic</p>
+							<p class="xyingwen">Solution Feature</p>
 						</li>
 					</ul>
 					<ul class="secondul">
