--- a/AboutMe.html
+++ b/AboutMe.html
@@ -16,7 +16,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<div class="ssuo clear">
 					<input type="text">
@@ -40,24 +40,24 @@
 						</li>
 						<li class="menu-acticve">
 							<p class="titlep">奥维生态</p>
-							<p class="titley">Aowei Ecology</p>
+							<p class="titley">Allway Ecology</p>
 							<span></span>
 						</li>
 						<li>
 							<p>奥维数据</p>
-							<p>Aowei Data</p>
+							<p>Allway Data</p>
 						</li>
 						<li>
 							<p>数梦起乘</p>
-							<p>Counting Dreams</p>
+							<p>GtDream Investment</p>
 						</li>
 						<li>
 							<p>物产中大数据</p>
-							<p>Wuchan zhongda Property</p>
+							<p>Wuchan Zhongda Data</p>
 						</li>
 						<li>
 							<p>衢时代</p>
-							<p>Chu Times</p>
+							<p>Qu Shi Dai Data</p>
 						</li>
 						<li>
 							<p>行业数据深度应用平台</p>
@@ -104,7 +104,7 @@
 						</li>
 						<li class="menu-acticve">
 							<p class="titlep">奥维生态</p>
-							<p class="titley">Aowei Ecology</p>
+							<p class="titley">Allway Ecology</p>
 							<span></span>
 						</li>
 					</ul>
@@ -114,23 +114,23 @@
 							<li>
 								<i class="iconfont">&#58882;</i>
 								<p class="titlep">奥维数据</p>
-								<p class="titley">Aowei Data</p>
+								<p class="titley">Allway Data</p>
 							</li>
 							<li>
 								<i class="iconfont">&#58938;</i>
 								<p class="titlep">数梦起乘</p>
-								<p class="titley">Counting Dreams</p>
+								<p class="titley">GtDream Investment</p>
 								<span>数梦起乘大数据产业基金是由浙江奥维数据技术有限公司和杭州数梦工场科技有限公司共同发起设立，该基金主要围绕大数据产业链进行深度投资，利用数梦工场在大数据领域的领先技术和奥维数据的融资能力以及社会资源关系，运用产融模式快速打造政务大数据平台，形成大数据产业集群，成为中国数字经济的产融服务领导者，通过IPO,并购，股权转让等方式实现基金退出。</span>
 							</li>
 							<li>
 								<i class="iconfont">&#58913;</i>
 								<p class="titlep">物产中大数据</p>
-								<p class="titley">Property</p>
+								<p class="titley">Wuchan Zhongda Data</p>
 							</li>
 							<li>
 								<i class="iconfont">&#59349;</i>
 								<p class="titlep">衢时代</p>
-								<p class="titley">Chu Times</p>
+								<p class="titley">Qu Shi Dai Data</p>
 								<span>这件衢州时代大数据科技有限公司是一家基于阿里巴巴和衢州市政府签订战略合作协议下的SPV落地公司，公司注册资本为5000万，控股股东为奥维数据公司，数梦工场参股，经营业务主要为大数据、云计算软硬件的技术开发和监控设备的安装维护等。目前，该公司主要承接我市“雪亮工程”项目建设和运维，在此基础上搭建了衢州市“城市数据大脑”。</span>
 							</li>
 							<li>
