--- a/NewsInfo.html
+++ b/NewsInfo.html
@@ -14,7 +14,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<div class="ssuo over-h">
 					<input type="text">
@@ -30,7 +30,7 @@
 					<ul class="big-menu">
 						<li>
 							<p class="zhongwen">新闻动态</p>
-							<p class="yingwen">News Information</p>
+							<p class="yingwen">News</p>
 						</li>
 						<li class="menu-acticve">
 							<p class="titlep">公司新闻</p>
