--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 			<!-- logo搜索 -->
 			<div class="lo-ss over-h loss">
 				<span class="logo">
-					<a href="Home.html">ALLWAY</a>
+					<a href="Home.html">ALLWAY DATA</a>
 				</span>
 				<ul class="menu left clear">
 					<li class="menu-items">
@@ -84,7 +84,7 @@
 				<div class="banner-content clear">
 					<div class="banner-title left">
 						<p><a href="ProductPlan.html">产品方案</a></p>
-						<p><a href="ProductPlan.html">Product Plan</a></p>
+						<p><a href="ProductPlan.html">Product Solution</a></p>
 						<p>衢州雪亮工程</p>
 						<p>衢州市是全国第一批</p>
 						<p>浙江省首个“雪亮工程”全国示范城市</p>
@@ -117,7 +117,7 @@
 		<div class="lo-ss daohang" id="bottom">
 			<ul class="si-dh">
 				<li class="logo">
-					<a href="#top">ALLWAY</a>
+					<a href="#top">ALLWAY DATA</a>
 				</li>
 			</ul>
 			<div class="middle-area-content clear">
@@ -135,19 +135,19 @@
 						<li>
 							<a href="ProductPlan.html">
 								<p>产品方案</p>
-								<p>Product Plan</p>
+								<p>Product Solution</p>
 							</a>
 						</li>
 						<li>
 							<a href="NewsInfo.html">
 								<p>新闻动态</p>
-								<p>News Information</p>
+								<p>News</p>
 							</a>	
 						</li>
 						<li>
 							<a href="#">
 								<p>合作伙伴</p>
-								<p>Cooperative Partner</p>
+								<p>Partner</p>
 							</a>	
 						</li>
 					</ul>
@@ -163,24 +163,24 @@
 							<li>
 								<a href="#">
 									<p class="titlep">奥维生态</p>
-									<p class="titley">Aowei Ecology</p>
+									<p class="titley">Allway Ecology</p>
 								</a>
 							</li>
 							<li>
 								<p>奥维数据</p>
-								<p>Aowei Data</p>
+								<p>Allway Data</p>
 							</li>
 							<li>
 								<p>数梦起乘</p>
-								<p>Counting Dreams</p>
+								<p>GtDream Investment</p>
 							</li>
 							<li>
 								<p>物产中大数据</p>
-								<p>Wuchan zhongda Property</p>
+								<p>Wuchan Zhongda Data</p>
 							</li>
 							<li>
 								<p>衢时代</p>
-								<p>Chu Times</p>
+								<p>Qu Shi Dai Data</p>
 							</li>
 							<li>
 								<p>行业数据深度应用平台</p>
@@ -197,11 +197,11 @@
 							</li>
 							<li>
 								<p>方案概述</p>
-								<p>Programme Plan</p>
+								<p>Solution Overview</p>
 							</li>
 							<li>
 								<p>方案特性</p>
-								<p>Programme Characteristic</p>
+								<p>Solution Feature</p>
 							</li>
 							<li>
 								<p>应用场景</p>
@@ -219,11 +219,11 @@
 							</li>
 							<li>
 								<p>方案概述</p>
-								<p>Programme Plan</p>
+								<p>Solution Overview</p>
 							</li>
 							<li>
 								<p>方案特性</p>
-								<p>Programme Characteristic</p>
+								<p>Solution Feature</p>
 							</li>
 							<li>
 								<p>应用场景</p>
@@ -253,11 +253,11 @@
 						<ul>
 							<li>
 								<p>数梦工场</p>
-								<p>Shumeng gongchang</p>
+								<p>Dt Dream</p>
 							</li>
 							<li>
 								<p>物产中大</p>
-								<p>Wuchan zhongda</p>
+								<p>Wuchan Zhongda Group</p>
 							</li>
 						</ul>
 					</div>
