--- a/AboutMe.html
+++ b/AboutMe.html
@@ -85,12 +85,12 @@
 						<p>公司拥有软件企业认定证书，测绘资质丙级证书，并通过IOS 9001：2008质量管理体系认证，CMM13级评估。在自主知识产权当面，以取得软件著作权登记书13项，软件产品登记证书12项，并获得数码成像档案仪专利1项。</p>
 					</div>
 				</div>
-				<div class="content-img clear"><img src="img/aboutbg.png" /></div>
+				<div class="content-img clear"><img src="img/aboutbg.jpg" /></div>
 			</div>
 			<!-- 顶部 -->
 			<!-- 底部 -->
 			<div class="lo-ss bottom-area ">
-				<div class="bgceng"><img src="img/bgceng.jpg" /></div>
+				<div class="bgceng"><img src="img/bgceng.png" /></div>
 				<div class="bottom-area-title clear">
 					<ul class="title left">
 						<li>
