--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -25,7 +25,7 @@
 			<!-- logo搜索 -->
 			<!-- 顶部标题 -->
 			<div class="top-area-content lo-ss over-h clear">
-				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
+				<div class="bgceng"><img src="img/bgceng2.png" /></div>
 				<div class="content-menu lo-ss">
 					<ul class="big-menu">
 						<li>
@@ -117,7 +117,7 @@
 
 			<!-- 中间部分 -->
 			<div class="middle-area lo-ss over-h clear">
-				<img class="bg-img" src="img/productbg.png" />
+				<img class="bg-img" src="img/productbg.jpg" />
 				<div class="bottom-logo">
 					<a href="Home.html">ALLWAY DATA</a>
 				</div>
@@ -254,7 +254,7 @@
 			<!-- 中间部分 -->
 			<!-- 底部部分 -->
 			<div class="bottom-area lo-ss over-h">
-				<img src="img/fanganbg.png"/>
+				<img src="img/fanganbg.jpg"/>
 				<div class="bottom-area-content lo-ss">
 					<div class="bottom-img">
 						<img src="img/producta.png"/>
