修改图片大小

--- a/ProductPlan.html
+++ b/ProductPlan.html
@@ -25,7 +25,7 @@
 			<!-- logo搜索 -->
 			<!-- 顶部标题 -->
 			<div class="top-area-content lo-ss over-h clear">
-				<div class="bgceng"><img src="img/bgceng2.png" /></div>
+				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
 				<div class="content-menu lo-ss">
 					<ul class="big-menu">
 						<li>
