--- a/Login.html
+++ b/Login.html
@@ -26,7 +26,7 @@
 			<!-- logo搜索 -->
 			<!-- 顶部标题 -->
 			<div class="top-area-content lo-ss over-h clear">
-				<div class="bgceng"><img src="img/bgceng2.png" /></div>
+				<div class="bgceng"><img src="img/bgceng2.jpg" /></div>
 				<div class="top-content">
 					<div class="firstul">
 						<p class="titlep">没有数据大脑的城市</p>
