--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 			<!-- 顶部背景 -->
 			<ul class="imgList">
 				<li>
-					<a style="background-image: url(img/homebg.jpg)"></a>
+					<a style="background-image: url(img/homebg.png)"></a>
 				</li>
 			</ul>
 			<!-- 顶部背景 -->
